--- a/option3.html
+++ b/option3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Red Deer Reavers · Option 3</title>
+  <title>Red Deer Reavers · Option 3 Article Style</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -15,124 +15,200 @@
           Red Deer Reavers
         </p>
         <nav class="flex items-center gap-2 text-[0.7rem] font-semibold uppercase tracking-[0.22em] text-[#c7cbd1]">
-          <a href="index.html" class="rounded-full px-3 py-1 hover:bg-black/40 hover:text-white">Home</a>
-          <a href="scoreboard.html" class="rounded-full px-3 py-1 hover:bg-black/40 hover:text-white">Record</a>
+          <a href="index.html" class="rounded-full px-3 py-1 hover:bg-black/40 hover:text-white">Layouts</a>
+          <a href="scoreboard.html" class="rounded-full px-3 py-1 hover:bg-black/40 hover:text-white">Scoreboard</a>
         </nav>
       </div>
     </header>
 
     <main class="flex-1">
-      <section class="mx-auto max-w-3xl px-4 pb-10 pt-8 sm:pt-10 sm:pb-12">
-        <h1 class="mb-2 text-3xl font-bold text-white sm:text-4xl">
-          Armored combat in Red Deer
-        </h1>
-        <p class="mb-4 text-sm sm:text-base">
-          Red Deer Reavers is a Buhurt team based in the Red Deer area.
-          We train full contact armored combat in a way that is safe, welcoming, and realistic.
-        </p>
-
-        <div class="mb-4 flex flex-wrap gap-2 text-xs text-[#c7cbd1]">
-          <span class="inline-flex items-center rounded-full border border-[#c7cbd1]/40 bg-[#1e0e4f]/80 px-3 py-1">
-            Buhurt
-          </span>
-          <span class="inline-flex items-center rounded-full border border-[#c7cbd1]/40 bg-[#730707]/80 px-3 py-1">
-            Full contact
-          </span>
-          <span class="inline-flex items-center rounded-full border border-[#c7cbd1]/40 bg-black/60 px-3 py-1">
-            Beginner friendly
-          </span>
-        </div>
-
-        <a href="#join"
-           class="mb-6 inline-flex items-center justify-center rounded-full bg-gradient-to-r from-[#d05621] via-[#730707] to-[#d05621]
-                  px-6 py-2 text-xs font-semibold uppercase tracking-[0.22em] text-white shadow-lg shadow-black/70">
-          Try a practice
-        </a>
-
-        <article class="mb-6">
-          <h2 class="mb-1 text-lg font-semibold text-white">What we do</h2>
-          <p class="mb-2 text-sm">
-            We train for Buhurt, a style of full contact armored fighting with real metal armor and blunted weapons.
-            Fights are in a fenced list and the goal is to put the other team on the ground.
+      <article class="mx-auto max-w-3xl px-4 pb-12 pt-8 sm:pt-10 sm:pb-14 prose prose-invert prose-sm sm:prose-base">
+        <header class="not-prose mb-6">
+          <p class="text-[0.75rem] font-semibold uppercase tracking-[0.3em] text-[#c7cbd1]">
+            Armored combat in Red Deer
           </p>
-          <p class="mb-2 text-sm">
-            The sport is demanding but very structured. There are weapon checks, armor checks, trained marshals, and clear rules.
+          <h1 class="mb-2 text-3xl font-bold text-white sm:text-4xl">
+            What it is like to join the Red Deer Reavers
+          </h1>
+          <p class="text-sm sm:text-base">
+            This page reads like a long answer to the question people ask most.
+            What am I getting myself into if I come out to practice
           </p>
-        </article>
+        </header>
 
-        <article class="mb-6">
-          <h2 class="mb-1 text-lg font-semibold text-white">Who can join</h2>
-          <ul class="ml-4 list-disc space-y-1 text-sm">
-            <li>Adults and older teens who want a new challenge.</li>
-            <li>No previous martial arts or sport experience required.</li>
-            <li>Any body type and fitness level. We build strength over time.</li>
+        <figure class="not-prose mb-6 overflow-hidden rounded-2xl border border-[#c7cbd1]/30 bg-black/40 shadow-xl shadow-black/70">
+          <img
+            src="assets/images/reavers-long-article.jpg"
+            alt="Armored fighters locked in a clinch mid fight"
+            class="h-56 w-full object-cover sm:h-72"
+            loading="lazy"
+          />
+          <figcaption class="px-4 py-2 text-[0.78rem] text-[#c7cbd1]">
+            Real armor, real effort, but with safety and respect at the core.
+          </figcaption>
+        </figure>
+
+        <section>
+          <h2>What we actually do on the list</h2>
+          <p>
+            Red Deer Reavers trains for Buhurt, a form of full contact armored combat.
+            Fighters wear full steel armor, use blunted weapons, and fight in teams inside a fenced list.
+            The goal is to put the other side on the ground while staying on your own feet.
+          </p>
+          <p>
+            It is loud, heavy, and tiring, but it is not chaos.
+            There are rules, experienced marshals, and a lot of respect between fighters.
+          </p>
+          <ul>
+            <li>Armor and weapons are checked before they enter the list.</li>
+            <li>There are clear illegal targets and actions that are not allowed.</li>
+            <li>Medical trained people are present at events.</li>
           </ul>
-        </article>
+        </section>
 
-        <article class="mb-6">
-          <h2 class="mb-1 text-lg font-semibold text-white">What practice looks like</h2>
-          <p class="mb-2 text-sm">
-            Most beginners start in soft kit and basic workout clothes.
-            We focus on moving safely and building the conditioning you need for armor.
+        <section>
+          <h2>Who shows up to train</h2>
+          <p>
+            People who train with us come from all kinds of backgrounds.
+            Some have done judo, rugby, or lifting.
+            Others have never played a contact sport before.
           </p>
-          <ul class="ml-4 list-disc space-y-1 text-sm">
-            <li>Warm up and basic movement drills.</li>
-            <li>Strength and cardio work that feels like fighting in armor.</li>
-            <li>Soft kit drills and controlled contact when you are ready.</li>
+          <p>
+            The common thread is that everyone wants a serious challenge and a team to belong to,
+            but they still have jobs, kids, and busy lives.
+          </p>
+          <ul>
+            <li>Adults and older teens who want something different from a regular gym.</li>
+            <li>Parents who schedule training around family life.</li>
+            <li>People who want to compete or people who just love training in armor.</li>
           </ul>
-        </article>
+        </section>
 
-        <article id="join" class="mb-6">
-          <h2 class="mb-1 text-lg font-semibold text-white">How to join</h2>
-          <ol class="ml-4 list-decimal space-y-1 text-sm">
-            <li>Send us a message on Facebook, Instagram, or Discord.</li>
-            <li>Pick a practice that fits your work and family schedule.</li>
-            <li>Show up with water, gym clothes, and an open mind.</li>
+        <section>
+          <h2>What your first night looks like</h2>
+          <p>
+            A lot of people worry they will walk into the gym and be thrown straight into a pile of steel.
+            That is not how we run things.
+          </p>
+          <p>
+            Your first night is about learning how we move and how we keep things safe.
+          </p>
+          <ol>
+            <li>We greet you, go over a short waiver, and talk through basic safety.</li>
+            <li>You join the warm up at your own pace.</li>
+            <li>We pair you with someone experienced for simple movement and balance drills.</li>
+            <li>If you enjoy it, you keep coming and we slowly add more contact over time.</li>
           </ol>
-        </article>
+        </section>
 
-        <article class="mb-6">
-          <h2 class="mb-1 text-lg font-semibold text-white">Safety and gear</h2>
-          <p class="mb-2 text-sm">
-            Steel armor is expensive and we do not expect anyone to buy a full kit right away.
+        <section>
+          <h2>How training is split across the week</h2>
+          <p>
+            The exact days move around with seasons and space, but the structure stays similar.
+            One session is more strength and conditioning, and one is more skills and armor time.
           </p>
-          <ul class="ml-4 list-disc space-y-1 text-sm">
-            <li>We help you plan gear in stages so it fits your budget.</li>
-            <li>We follow standard armor and weapon rules used across Canada.</li>
-            <li>We train safe falling, body awareness, and tapping out if something feels wrong.</li>
-          </ul>
-        </article>
+          <div class="not-prose mt-3 overflow-hidden rounded-xl border border-[#c7cbd1]/30 bg-black/40">
+            <table class="min-w-full border-collapse text-xs sm:text-sm">
+              <thead>
+                <tr class="bg-[#1e0e4f]/80 text-[#c7cbd1]">
+                  <th class="border border-[#c7cbd1]/30 px-3 py-2 text-left">Session</th>
+                  <th class="border border-[#c7cbd1]/30 px-3 py-2 text-left">Focus</th>
+                  <th class="border border-[#c7cbd1]/30 px-3 py-2 text-left">Examples</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr class="bg-black/30">
+                  <td class="border border-[#c7cbd1]/25 px-3 py-2">Reavers Crucible</td>
+                  <td class="border border-[#c7cbd1]/25 px-3 py-2">Strength and conditioning</td>
+                  <td class="border border-[#c7cbd1]/25 px-3 py-2">Carries, drags, pushes, sprints, and grip work.</td>
+                </tr>
+                <tr class="bg-black/20">
+                  <td class="border border-[#c7cbd1]/25 px-3 py-2">Skills and list work</td>
+                  <td class="border border-[#c7cbd1]/25 px-3 py-2">Footwork, clinch, list games</td>
+                  <td class="border border-[#c7cbd1]/25 px-3 py-2">Soft kit drills and armor work for people with gear.</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </section>
 
-        <article class="mb-6">
-          <h2 class="mb-1 text-lg font-semibold text-white">Location and contact</h2>
-          <ul class="space-y-1 text-sm">
-            <li><span class="font-semibold text-white">Area</span> Red Deer, Alberta</li>
+        <section>
+          <h2>How we handle gear and cost</h2>
+          <p>
+            A full set of armor can be a big investment.
+            We do not expect new people to show up with a full kit or buy everything at once.
+          </p>
+          <p>
+            Instead we think in stages and help you make smart choices so you are not buying things twice.
+          </p>
+          <ul>
+            <li>Stage one is soft kit and loaner shields or padded weapons.</li>
+            <li>Stage two adds key protection like helmet, neck, and hands.</li>
+            <li>Stage three is a full kit built piece by piece as you are ready.</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>What about injuries and safety</h2>
+          <p>
+            Any full contact sport carries some risk, and we are honest about that.
+            At the same time we do everything we can to keep those risks as low as possible.
+          </p>
+          <ul>
+            <li>We make sure armor fits properly before it sees contact.</li>
+            <li>We teach safe falling, posting, and how to tap out if something feels off.</li>
+            <li>We avoid people fighting when they are too tired to protect themselves.</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>How to actually get started</h2>
+          <p>
+            If you have read this far and the idea still sounds good, the next step is simple.
+          </p>
+          <ol>
+            <li>Send us a message on Facebook, Instagram, or Discord.</li>
+            <li>Tell us a little about your schedule and any injuries we should know about.</li>
+            <li>We point you at a practice date and tell you exactly what to bring.</li>
+          </ol>
+        </section>
+
+        <section class="not-prose mt-8 rounded-2xl border border-[#c7cbd1]/30 bg-black/40 p-4">
+          <h2 class="mb-2 text-lg font-semibold text-white">Contact and scoreboard</h2>
+          <p class="mb-2 text-sm">
+            If you want more details about practices, armor, or cost, reach out any time.
+          </p>
+          <ul class="mb-3 space-y-1 text-sm">
             <li><span class="font-semibold text-white">Captain</span> Garrett Robson</li>
             <li><span class="font-semibold text-white">Email</span> reddeerreavers@gmail.com</li>
+            <li><span class="font-semibold text-white">Area</span> Red Deer, Alberta</li>
           </ul>
-          <p class="mt-2 text-sm">
-            You can also find us on Facebook, Instagram, and Discord by searching for Red Deer Reavers.
-          </p>
-        </article>
-
-        <article class="mb-2">
-          <h2 class="mb-1 text-lg font-semibold text-white">Record and tournaments</h2>
-          <p class="mb-2 text-sm">
-            We track our wins and losses across events.
-            You can see the current numbers on our scoreboard page.
-          </p>
+          <div class="mb-3 flex flex-wrap gap-2 text-xs font-semibold uppercase tracking-[0.18em]">
+            <a href="https://www.facebook.com/profile.php?id=61566406838469" target="_blank"
+               class="rounded-full border border-[#c7cbd1]/40 bg-[#1e0e4f]/80 px-3 py-1 text-[#c7cbd1] hover:bg-[#730707]/80 hover:text-white">
+              Facebook
+            </a>
+            <a href="https://www.instagram.com/red_deer_reavers/" target="_blank"
+               class="rounded-full border border-[#c7cbd1]/40 bg-[#1e0e4f]/80 px-3 py-1 text-[#c7cbd1] hover:bg-[#730707]/80 hover:text-white">
+              Instagram
+            </a>
+            <a href="https://discord.gg/6aXEkuR4x3" target="_blank"
+               class="rounded-full border border-[#c7cbd1]/40 bg-[#1e0e4f]/80 px-3 py-1 text-[#c7cbd1] hover:bg-[#730707]/80 hover:text-white">
+              Discord
+            </a>
+          </div>
           <a href="scoreboard.html"
-             class="inline-flex items-center justify-center rounded-full border border-[#c7cbd1]/40 bg-black/50
-                    px-4 py-2 text-[0.7rem] font-semibold uppercase tracking-[0.22em] text-[#c7cbd1] hover:bg-black/70 hover:text-white">
-            Open team scoreboard
+             class="inline-flex items-center justify-center rounded-full border border-[#c7cbd1]/40 bg-[#d05621]/80
+                    px-4 py-2 text-[0.7rem] font-semibold uppercase tracking-[0.22em] text-white hover:bg-[#730707]/80">
+            View team scoreboard
           </a>
-        </article>
-      </section>
+        </section>
+      </article>
     </main>
 
     <footer class="border-t border-[#c7cbd1]/25 bg-[#0f0830]/95">
       <div class="mx-auto flex max-w-3xl items-center justify-between px-4 py-3 text-[0.7rem] text-[#c7cbd1]">
-        <p>Red Deer Reavers · Option 3 layout</p>
+        <p>Red Deer Reavers Buhurt Team · Option 3 article layout</p>
         <a href="index.html" class="underline">Back to layout selector</a>
       </div>
     </footer>
