--- a/option4.html
+++ b/option4.html
@@ -103,7 +103,7 @@
                 data-gallery-thumb
                 data-gallery-index="0">
                 <img
-                  src="assets/image (1).jpg"
+                  src="assets/gallery/image (1).jpg"
                   alt="Wide shot of armored fighters in a list"
                   class="h-28 w-full object-cover sm:h-32"
                   loading="lazy"
@@ -367,29 +367,30 @@
   <script>
     // Gallery image list: add any new jpg here and it will show everywhere
     const galleryImages = [
-      "assets/image (1).jpg",
-      "assets/image (2).jpg",
-      "assets/image (3).jpg",
-      "assets/image (4).jpg",
-      "assets/image (5).jpg",
-      "assets/image (6).jpg",
-      "assets/image (7).jpg",
-      "assets/image (8).jpg",
-      "assets/image (9).jpg",
-      "assets/image (10).jpg",
-      "assets/image (11).jpg",
-      "assets/image (12).jpg",
-      "assets/image (13).jpg",
-      "assets/image (14).jpg",
-      "assets/image (15).jpg",
-      "assets/image (16).jpg",
-      "assets/image (17).jpg",
-      "assets/image (18).jpg",
-      "assets/image (19).jpg",
-      "assets/image (20).jpg",
-      "assets/image (21).jpg",
-      "assets/image (22).jpg"
-    ];
+  "assets/gallery/image (1).jpg",
+  "assets/gallery/image (2).jpg",
+  "assets/gallery/image (3).jpg",
+  "assets/gallery/image (4).jpg",
+  "assets/gallery/image (5).jpg",
+  "assets/gallery/image (6).jpg",
+  "assets/gallery/image (7).jpg",
+  "assets/gallery/image (8).jpg",
+  "assets/gallery/image (9).jpg",
+  "assets/gallery/image (10).jpg",
+  "assets/gallery/image (11).jpg",
+  "assets/gallery/image (12).jpg",
+  "assets/gallery/image (13).jpg",
+  "assets/gallery/image (14).jpg",
+  "assets/gallery/image (15).jpg",
+  "assets/gallery/image (16).jpg",
+  "assets/gallery/image (17).jpg",
+  "assets/gallery/image (18).jpg",
+  "assets/gallery/image (19).jpg",
+  "assets/gallery/image (20).jpg",
+  "assets/gallery/image (21).jpg",
+  "assets/gallery/image (22).jpg"
+];
+
 
     const lightboxGallery = document.getElementById("lightboxGallery");
     const galleryImage = document.getElementById("galleryImage");
