--- a/option4.html
+++ b/option4.html
@@ -214,7 +214,7 @@
               data-gallery-thumb
               data-gallery-index="1">
               <img
-                src="assets/image (2).jpg"
+                src="assets/gallery/image (1).jpg"
                 alt="Group training in soft kit and armor together"
                 class="h-40 w-full object-cover"
                 loading="lazy"
