--- a/option4.html
+++ b/option4.html
@@ -214,8 +214,8 @@
               data-gallery-thumb
               data-gallery-index="1">
               <img
-                src="assets/gallery/image (1).jpg"
-                alt="Group training in soft kit and armor together"
+                src="assets/gallery/image (20).jpg"
+                alt="Gear on chair"
                 class="h-40 w-full object-cover"
                 loading="lazy"
               />
